# Projeto-final

./: README.md  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
backend/: .gitignore  Dockerfile  docker-compose.yml  env.dev  pyproject.toml  requirements.txt
backend/tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/tweets/migrations/: 0001_initial.py  0002_alter_tweet_author.py  0003_rename_timestamp_tweet_created_at_and_more.py  0004_add_created_at.py  0005_comment.py
backend/twitter_clone/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/users/: admin.py  managers.py  models.py  serializers.py  tests.py  token_serializers.py  token_views.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_following.py  0003_remove_user_following_user_followers.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  TweetBox.tsx
frontend/src/components/tweet/: Tweet.tsx  TweetList.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  Logo.tsx
frontend/src/hooks/: useAuth.ts  useTweets.ts
frontend/src/pages/: Feed.tsx  Login.tsx  Profile.tsx  Signup.tsx
frontend/src/routes/: index.tsx
