[tool.poetry]
name = "twitter_main"
version = "0.1.0"
description = ""
authors = ["Rafael Glowacki <rafaelglowacki333@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.13"
psycopg2-binary = ">=2.9.10,<3.0.0"
gitpython = ">=3.1.45,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
